# packages/contracts/src/generated/openapi.json
@@ -1744,7 +1744,8 @@
         "required": [
           "character_id",
           "state_version",
-          "active_config_version"
+          "active_config_version",
+          "active_loadout_preset_id"
         ],
         "properties": {
           "character_id": {
@@ -1756,6 +1757,11 @@
           },
           "active_config_version": {
             "type": "string"
+          },
+          "active_loadout_preset_id": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
           }
         }
       },
